# backend/docs/swagger.json
@@ -15,6 +15,152 @@
         "version": "1.0"
     },
     "paths": {
+        "/dashboard/summary/charts/{type}": {
+            "get": {
+                "description": "최근 30일 간 데이터",
+                "consumes": [
+                    "application/json;charset=UTF-8"
+                ],
+                "produces": [
+                    "application/json;charset=UTF-8"
+                ],
+                "tags": [
+                    "Dashboard"
+                ],
+                "summary": "최근 30일 간 데이터",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Chart Type",
+                        "name": "type",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "object",
+                                "properties": {
+                                    "count": {
+                                        "type": "integer"
+                                    },
+                                    "orderer": {
+                                        "type": "string"
+                                    },
+                                    "timestamp": {
+                                        "type": "string"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/dashboard/summary/last-month": {
+            "get": {
+                "description": "지난 달 주문 요약",
+                "consumes": [
+                    "application/json;charset=UTF-8"
+                ],
+                "produces": [
+                    "application/json;charset=UTF-8"
+                ],
+                "tags": [
+                    "Dashboard"
+                ],
+                "summary": "지난 달 주문 요약",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dashboard.SummaryCountResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/dashboard/summary/today": {
+            "get": {
+                "description": "금일 주문 현황",
+                "consumes": [
+                    "application/json;charset=UTF-8"
+                ],
+                "produces": [
+                    "application/json;charset=UTF-8"
+                ],
+                "tags": [
+                    "Dashboard"
+                ],
+                "summary": "금일 주문 현황",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dashboard.SummaryCountResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/join": {
             "post": {
                 "description": "Chain expressbill 관리자 회원가입",
@@ -43,7 +189,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "boolean"
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -147,7 +293,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "boolean"
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -198,6 +344,17 @@
                 },
                 "password": {
                     "type": "string"
+                }
+            }
+        },
+        "dashboard.SummaryCountResponse": {
+            "type": "object",
+            "properties": {
+                "orderCount": {
+                    "type": "integer"
+                },
+                "ordererCount": {
+                    "type": "integer"
                 }
             }
         },
